Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127906

Qt.labs.platform.Menu opens at the wrong location with scaling enabled

    XMLWordPrintable

Details

    • Linux/X11
    • 7574111a5 (dev), b0f91c7f4 (6.8), 3cd5450ea (6.7), 2e69fb974 (tqtc/lts-6.5), b6dde1f31 (dev), f1cd4c57b (6.8)

    Description

      When the QT_SCALE_FACTOR is set to 1.25 1.5 1.75 2 for multiple screens, the window is located on the second screen and the menu pops up incorrectly when the mouse clicks menu.open()

      import QtQuick
      import Qt.labs.platform
      
      Window {
          width: 640
          height: 480
          visible: true
          title: qsTr("Hello World")
      
          MouseArea {
              anchors.fill: parent
              onClicked: menu.open()
          }
      
          Menu {
              id: menu
              MenuItem {
                  text: "test1"
              }
          }
      }
      
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              dami dami Lu
              dami dami Lu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes