Fix multi-screen menu pop-up location

According to f8cf17166c9af147f0b8fea72f5b4a8a6098a5d7

When QT_SCALE_FACTOR is greater than 1, the Popup menu pops up
incorrectly on the second screen.

Replace the toNativePixels with toNativeLocalPosition.

Fixes: QTBUG-127906
Pick-to: 6.5
Change-Id: Id320063afccfd3a391426bc6419cbe8855c57b98
Reviewed-by: Inho Lee <inho.lee@qt.io>
(cherry picked from commit 7574111a56d38832fd330df5ba4839d0263fbc09)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b0f91c7f4c3502e1e4a0aaec6cc5b06496a639fe)