src/labs/platform/qquicklabsplatformmenu.cpp
@@ -695,7 +695,7 @@ void QQuickLabsPlatformMenu::open(QQmlV4Function *args)
 #endif
     }
     m_handle->showPopup(window,
-                        QHighDpi::toNativePixels(targetRect, window),
+                        QHighDpi::toNativeLocalPosition(targetRect, window),
                         menuItem ? menuItem->handle() : nullptr);
 }
 
